feat: 前端周刊笔记更新

--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -192,6 +192,24 @@ Bundleless 和传统的构建工具相比，最大的特点就是不用将业务
 
 ### 科技爱好者周刊
 [美国宪法拍卖，一个区块链案例](https://github.com/ruanyf/weekly/blob/master/docs/issue-185.md)
+```
+这一切都是因为有了区块链。“宪法 DAO”的发起者都是普通人，无权无势，用到的工具都是现成的公开服务，不用自己开发。任何一个人都可以参考他们的做法，使用同样的工具，为自己的项目集资，我觉得这就是这件事的意义，展示了区块链带来的金融变革。有了这些工具，以后为项目集资、创立股份公司是一件多么方便的事情，成本多么低。
+```
+* [墓碑二维码](https://www.phnompenhpost.com/lifestyle/salvadoran-resident-replaces-epitaphs-qr-codes) 为死者提供一专有网站
+* [5G 基站有多耗电？](http://finance.sina.com.cn/tech/csj/2021-02-26/doc-ikftpnny9891878.shtml)
+```
+一个 5G 室外基站平均功耗 3.8KW 左右，是 4G 基站的3倍以上，电费约2.3－3万元/年。估计到2026年，5G 基站耗电量将上升至全社会用电量的2.1%，略高于数据中心（约2%）的耗电量水平。
+```
+* [如何用 esbuild 打包 express 应用](https://devtails.medium.com/bundling-your-node-js-express-app-with-esbuild-5aecc36c5047)
+* [Netlify Drop](https://app.netlify.com/drop)
+```
+Netlify 最近发布的一个静态网页托管服务，只要把包含 HTML、CSS、JS 文件的目录拖到上传位置，Netlify 就会自动将这个目录发布为网站。这跟 Dropbox 的功能有点像。
+```
+* [CSS Doodle](https://yuanchuan.dev/polygon-shapes) 一个 Web Component 组件，可以使用 CSS 语法产生各种形状。
+* [Arco Design](https://arco.design/)字节跳动推出的企业级设计系统，提供丰富的原子组件，同时支持 React 组件库 和 Vue 组件库，可以进行各种定制。antdesign 竞品
+* [Google DNS](https://dns.google/) 谷歌提供的 DNS 查询页面，可以查询某个域名或 IP 地址的 DNS 信息。
+* [树形目录列表生成器](https://devtool.tech/tree) 一个网页小工具，生成文本的树形目录结构，方便将目录结构插入 Markdown 文章。
+* [OKR.com](https://www.okr.com/) OKR 是一种绩效目标管理方法，很多互联网公司采用这种方法。该网站收集了关于 OKR 的各种资料。
 
 ### 知乎： 前端快爆
 暂无
