--- a/fe_blog/2021_12_fe_week.md
+++ b/fe_blog/2021_12_fe_week.md
@@ -50,3 +50,22 @@ Electron 16.0.0 正式发布，更新内容包括：
 
 ### 政采云前端周刊
 
+
+## 2021-01-06 ~ 2021-01-12
+### 科技爱好者周刊
+* [元宇宙会成功么？](https://github.com/ruanyf/weekly/blob/master/docs/issue-187.md)
+```
+前不久，脸书的老板扎克伯格接受专访。
+记者提问，为啥你们公司要改名为 Meta（元宇宙）？
+人们愿意待在虚拟世界，进行娱乐和工作。 元宇宙的需求真实存在，而且这种需求很大，只要能够创造更好的体验，就会诞生一个空前的市场。
+```
+
+
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [426期](https://weekly.75.team/issue426.html) 8篇文章
+
+### 政采云前端周刊
+
