feat: node 书籍阅读笔记

--- a/fe_blog/2021_12_fe_week.md
+++ b/fe_blog/2021_12_fe_week.md
@@ -58,8 +58,18 @@ Electron 16.0.0 正式发布，更新内容包括：
 前不久，脸书的老板扎克伯格接受专访。
 记者提问，为啥你们公司要改名为 Meta（元宇宙）？
 人们愿意待在虚拟世界，进行娱乐和工作。 元宇宙的需求真实存在，而且这种需求很大，只要能够创造更好的体验，就会诞生一个空前的市场。
-```
 
+“软件供应链攻击”指的是攻击软件所依赖的代码库或服务，正以每年 4-5 倍的指数速度增加，去年有数千起。
+最常见的供应链攻击有两种形式，一是起一个跟依赖库或域名很容易混淆的名字，二是向依赖库注入恶意代码。
+```
+* [中国未来最大的挑战](https://mp.weixin.qq.com/s/eS2i1gY4mdNiM_0ugpkxbA)
+```
+饶毅的署名文章，认为中国科学的根基还是很薄弱。
+他说，中国真正开展科学研究的历史只有一百多年，很多人搞科学不是因为感兴趣，或者有好奇心，而是出于实用主义动机。
+```
+* [照片变二次元 - AnimeGANv2](https://www.shejipi.com/660746.html)
+* [AppFlowy](https://www.appflowy.io/) Notion 的开源替代品，可以自己架设一个多功能的在线编辑器。
+* [supabase](https://supabase.com/) 一个 Postgres 数据库的云服务，号称是 Firebase 的开源替代品。
 
 ### 知乎： 前端快爆
 * 暂无
@@ -68,4 +78,4 @@ Electron 16.0.0 正式发布，更新内容包括：
 * [426期](https://weekly.75.team/issue426.html) 8篇文章
 
 ### 政采云前端周刊
-
+* [162期](https://weekly.zoo.team/detail/162) 4篇文章
