--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -186,7 +186,7 @@ Bundleless 和传统的构建工具相比，最大的特点就是不用将业务
 * [重排、重绘、合成，你真的懂吗？](https://mp.weixin.qq.com/s/57aMCVDjuVswEFFep3omLQ)
 
 ### 政采云前端周刊
-
+* [160期](https://weekly.zoo.team/detail/160) 1篇博文
 
 ## 2021-11-22 ~ 2021-11-28
 
@@ -218,3 +218,4 @@ Netlify 最近发布的一个静态网页托管服务，只要把包含 HTML、C
 * [424期](https://weekly.75.team/issue424.html) 8篇博文
 
 ### 政采云前端周刊
+* [161期](https://weekly.zoo.team/detail/161) 8篇博文
