feat: 前端周刊阅读笔记更新

--- a/fe_blog/2021_12_fe_week.md
+++ b/fe_blog/2021_12_fe_week.md
@@ -49,7 +49,7 @@ Electron 16.0.0 正式发布，更新内容包括：
 * [425期](https://weekly.75.team/issue425.html) 8篇博文
 
 ### 政采云前端周刊
-
+* [161期](https://weekly.zoo.team/detail/161) 8篇博文
 
 ## 2021-01-06 ~ 2021-01-12
 ### 科技爱好者周刊
@@ -72,10 +72,106 @@ Electron 16.0.0 正式发布，更新内容包括：
 * [supabase](https://supabase.com/) 一个 Postgres 数据库的云服务，号称是 Firebase 的开源替代品。
 
 ### 知乎： 前端快爆
-* 暂无
+* [技术周刊12-10](https://zhuanlan.zhihu.com/p/445364992) OpenType 1.9 带来全新的彩色字体规范
+```
+Firefox 96 支持了 CSS hwb() 颜色函数，通过色调、白度和黑度来表达颜色，此前 Safari 15 已经支持。
+CSS 表现颜色的能力目前依然很弱，说出来你可能不信，在未实现 display-p3 之前，CSS 无法访问大多数现代显示器中三分之一的颜色。
+
+OpenType 1.9 正式发布，最大的变化是新增了 COLR 表的第二个版本（COLRv1）。这是全新的彩色字体规范，可以实现渐变、仿射变换（Affine transformation）和多种混合模式，满足绝大多数 Emoji 或彩色图标的设计。将在 Chrome 98 中正式启用。
+Safari 正式启用 CSS :focus-visible 伪类，至此，所有主流浏览器均已实现。
+点评：是时候告别 * {outline: none;} 了。
+
+```
+* [iconfont 支持全新的彩色字体图标](https://zhuanlan.zhihu.com/p/377136770) 阿里 iconfont 彩色字体新版本发布
+```
+基于COLOR字体（初版微软，最新版-v1 谷歌、微软合作推出），支持矢量+渐变， 不支持位图。浏览器兼容：IE9+；
+没听说过 KaiOS？这可是印度第二大移动操作系统！
+```
+* [的新型沙盒技术——RLBox](https://hacks.mozilla.org/2021/12/webassembly-and-back-again-fine-grained-sandboxing-in-firefox-95/)不久前发布的 Firefox 95 中，带来了基于 WebAssembly 的新型沙盒技术——RLBox。
+* [手绘板 - 在线画板工具](https://www.tldraw.com/) 博文的流程图等 选择更多样！
 
 ### 奇舞周刊
 * [426期](https://weekly.75.team/issue426.html) 8篇文章
+* [“web资源加载优先级”原来能这么精准控制](https://mp.weixin.qq.com/s/kaT3qAku86_ihSJA8oC0yQ)
 
 ### 政采云前端周刊
 * [162期](https://weekly.zoo.team/detail/162) 4篇文章
+
+
+## 2021-12-13 ~ 2021-12-19
+
+### 科技爱好者周刊
+* [音乐是反社交]https://github.com/ruanyf/weekly/blob/master/docs/issue-188.md)
+```
+国际上出名的音乐APP没任何社交功能；
+世界最大的两个音乐应用 Spotify 和 Apple Music 都没有社交元素，界面都很清爽，几乎没有听音乐以外的功能。
+个人总结：国内音乐APP都主打社交，谁优谁劣？很难说，加入社交没什么不好！我挺在意喜欢的人她听的是什么音乐！
+
+沙特阿拉伯是世界主要石油生产国，有很多废弃的油田。该国计划将多个海上石油钻井平台串连起来，建造一个主题公园，总面积达到15万平方米。
+
+随着手机的流行，街头电话亭越来越没人使用。上海开始尝试，将电话亭改造成打车亭。
+
+演示，如何生成一张可以正常显示、但永远无法下载完成的图片，原理是服务器不结束连接，不断发送数据。
+
+你的估计需要乘以 π， 一切顺利的情况下，从 A 点到 B 点的路线是一条直线。没有遇到困难时，就是两点之间直线最短。
+但是现实中，很多事情都是不顺利的。你会遇到各种各样的困难，你会迷失方向，路线不可能是直线，而是曲线。
+这意味着，你预估一件事的难度是1，实际难度可能是3；你预估需要一个月完成的项目，实际需要的时间可能是三个月。
+
+我的一些朋友认为，每两到三年换一次工作，是获得成功的最快方式。
+```
+* [apifox](https://www.apifox.cn/) API 开发、调试 集成工具
+```
+程序员的日常工作，就是跟各种服务的 API 打交道，主要用到下面几个工具。
+Swagger（后改名 OpenAPI）：用于 API 设计。
+Postman：调试 API。
+Mock 工具：模拟 API 的返回数据，用于测试。
+JMeter：API 性能压测。
+
+Apifox = Postman + Swagger + Mock + JMeter
+个人使用小结： 自动登录没有谷歌浏览器插件，比较麻烦，不如 postman 方便；
+```
+* [一家中国内陆电池工厂的薪资（中文）](https://zhuanlan.zhihu.com/p/442111383)
+```
+现代化工厂， 996 加班总工资才5000 ~ 7000， 还有那么多人蜂拥而至 应聘！
+```
+* [理解log4Shell 漏洞](https://sspai.com/post/70394) 诸如「互联网正在着火」「过去十年最严重的漏洞」「现代计算机历史上最大漏洞」「难以想到哪家公司不受影响」
+```
+此漏洞的本质是JNDI注入，许多地方只验证了dnslog，不代表能命令执行，因为要达到命令执行需要加载恶意类，高版本JDK默认对此有限制。
+形象的讲是记录员（log4j 库） 有 权限访问 服务器文件目录、执行相关 服务器操作；
+```
+* [如何创建你的第一个 NFT](https://medium.com/@contact_9164/how-to-create-your-first-nft-illustrated-with-shitty-stock-photos-bec48c91b4b9)
+```
+NFT，全称为Non-Fungible Token，指非同质化代币，是用于表示数字资产（包括jpg和视频剪辑形式）的唯一加密货币令牌，可以买卖。
+区块链 - 比特币等衍生，不可替代的货币；
+还有：一旦你丢失了你的私钥，你就完蛋了。没有办法取回私钥。这就是为什么一位英国绅士想要挖掘一个旧垃圾填埋场，以取回他保存在价值 3 亿美元的硬盘上的私钥。
+```
+* [在HTML显示Markdown组件](https://github.com/leaverou/md-block)
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [427期](https://weekly.75.team/issue427.html) 7篇博文
+* [Taro 3.5 canary 发布：支持适配 鸿蒙](https://mp.weixin.qq.com/s/Hud405mLileIEzHX3Z-ueQ)
+```
+今年 Harmony2.0 正式推出供用户进行升级之后，在短短的三个月内实现了 1.2 亿的装机量，并且在前不久的华为开发者大会上，华为宣布 Harmony2.0 的装机量已经突破了 1.5 亿。
+Taro 作为一个开放式的 跨端跨框架 解决方案，不少开发者期待将小程序的能力移植到鸿蒙 OS 上，可以使用 Taro 开发鸿蒙 && OpenHarmony 应用。目前 Taro 和 OpenHarmony 建立了官方合作关系，并成立了跨平台 UI 兴趣小组
+```
+* [Web图像组件设计的最佳实践](https://mp.weixin.qq.com/s/-T5107cpL_HsW-JP6LeHSg) 涉及不少性能相关 细节， 如 CSS新特性：aspect-ratio, <img>元素的 srcset 和 sizes等；
+* [React 轮播动画探索](https://mp.weixin.qq.com/s/7maQP3LbIj_XZoHogfUIpA) 实现氛围气泡 功能 实践总结（React 动画）
+```
+其实只要观察，数据列表的长度是静态的，还是会动态改变的。
+静态：使用幻灯片组件，如 swiper
+动态：使用 react 生态的组件，如 react-transition-group
+```
+* [100行代码实现React核心调度功能](https://mp.weixin.qq.com/s/uuxHlanqyN2HneYOz7DMVw)
+* [LOOK 直播活动地图生成器方案](https://mp.weixin.qq.com/s/eyiW3mWfsvslAs3sv8jiJw) H5 活动， 大富翁地图 实现实践分享
+* [设计稿生成代码（imgcook）居然还可以开发动画!](https://mp.weixin.qq.com/s/IY0acNoy-zbZOZJYwVt3Iw) 有软文嫌疑，不收录
+* [何改善应用启动性能 | Facebook 应用的经验分享](https://mp.weixin.qq.com/s/bAmIUgXBzT22bxVBWTzAQA) APP 启动时间优化博文（为嘛在前端博文出现？）
+```
+现在，每个月有超过 29 亿人使用 Facebook。Facebook 帮助人们构建社区，并让世界更紧密地联系在一起。用户会在这里分享生活的瞬间，了解和讨论正在发生的事情，建立和培养人际关系，共同合作以创造收入机会。
+```
+
+### 政采云前端周刊
+* [163](https://weekly.zoo.team/detail/163) 两篇博文
+* [H5 和移动端 WebView 缓存机制解析与实战](https://zhuanlan.zhihu.com/p/27456323) html5缓存主要可以分为http协议缓存、应用缓存、DOM Storage、webSQL和indexedDB几种方式，针对不同的方式清理缓存的方式也不尽相同。
+* [useEffect和useLayoutEffect的区别](https://www.jianshu.com/p/412c874c5add) 这种博文都收录，政采云团队越来越偷懒了！
