feat: 前端周刊笔记更新

--- a/fe_blog/2022_01_fe_week.md
+++ b/fe_blog/2022_01_fe_week.md
@@ -1,15 +1,55 @@
 ## 2021-01-03 ~ 2021-01-09
 
 ### 科技爱好者周刊
-
+* [一个程序员的财务独立之路](https://github.com/ruanyf/weekly/blob/master/docs/issue-191.md)
+```
+封面图： 跳跃机器人， 2021年度技术突破之一；
+美国程序员怎么做到财务独立：
+1）最求工资提升；
+2）每过三年，就到别处面试；
+3）建立良好的职业履历；
+4）优先计入增长最快的领域；
+5）投资你的钱；
+6）节制消费；
+最近，Go 新版本 1.18 正式加入了泛型，这是近几年来这门语言最大的功能增强。
+Go 已经是国内的第二大互联网开发语言，仅次于 Java，各大厂都在用于生产环境。这导致 Go 语言的招聘岗位一直很多，而开发者相对稀缺。
+Lapce - 一个 Rust 语言写的轻量级代码编辑器，速度极快，功能上模仿了 VS Code，支持 Windows 和 MacOS。
+C 和 C++ 这两种语言不保证内存安全，后果就是所有软件安全问题的大约三分之二，都跟内存处理不当有或多或少的关系。
+-- 《Rust 正在变成 Linux 的第二官方语言》
+```
+* [2021年度最佳的100种新产品](https://www.popsci.com/technology/best-of-whats-new-2021/#Aerospace)
+* [where 与 having 子句的区别(英文)](https://sql-bits.com/the-difference-between-where-and-having/)
+* [在线版PPT](https://github.com/pipipi-pikachu/PPTist) 一个 PPT 网页应用，还原了大部分 PowerPoint 常用功能，支持 PPT 的在线编辑、演示和导出。这里有 [demo](https://pipipi-pikachu.github.io/PPTist/)
+* [DareBee](https://darebee.com/workouts.html) 这个网站收集了1700多种身体锻炼的方法，每种方法都有插图说明。
 
 ### 知乎： 前端快爆
-
-
+* [NAPI-RS v2 发布](https://zhuanlan.zhihu.com/p/451229829) NAPI-RS v2 - 更快 , 更易用，与 Node.js 生态更好兼容.
+```
+Safari Technology Preview 137 中已经正式启用 CSS 父元素选择器 :has()，Chrome 还在实现中，需要在最新的 Canary 中开启 Flag。
+```
+* [精益求精，体验创新 | 第十六届 D2 前端技术论坛精彩回顾（附PPT和回放观看方式）](https://mp.weixin.qq.com/s/BQgPuxTdZi06eIpiL93hSQ) 会议包含六大主题：语言框架、跨端技术、前端体验、低代码、Node/Serverless、多样化。
 ### 奇舞周刊
-
+* [430期](https://weekly.75.team/issue430.html) 9篇博文
+* [动态图片生成方案](https://mp.weixin.qq.com/s/0dWfL3ChIceH6rQ8-Oh6pg) 1）客户端实现 - html2canvas 2）服务端实现 Puppeteer 3）最终方案 - Golang
+```
+但是 Puppeteer 在我们的实测中它的性能实在堪忧，由于 Puppeteer 每次生成图片都需要新建一个浏览器 Tab，然后需要相应的进程来渲染网页、生成截图，当请求多的时候，会占用大量的服务器资源，它的 QPS 很难达到我们预期的水平。
+通过调研，大部分编程语言都有支持图片合成的库（如imagemagick)，考虑到 Nodejs 并不适合这种 CPU 密集型任务，我们最终采用了 Golang 渲染 + NodeJs 数据存储来实现图片生成。
+```
+* [在线流程图绘制](https://online.visual-paradigm.com/app/diagrams/#diagram:proj=0&type=Flowchart&width=11&height=8.5&unit=inch)
+* [ES6 以上版本代码要不要转码成 ES5?](https://mp.weixin.qq.com/s/fSRpl25Pi0ladeWRXHLGZA) 可以看到，有98.14%的浏览器支持ES6. 没有超过99%的原因是因为2015年发布的Opera Mini还有1.08%的使用率。除了像解构引入了迭代这样的结构会变得复杂以外，大部分情况下，从源代码和字节码两个方面看，如果可以不转码，更有利于v8提升性能。
+* [Chrome 97 发布 WebTransport，QUIC 协议小试牛刀](https://mp.weixin.qq.com/s/upOra3ONzP98ZqXxHYo4Sg) Chrome 97最大的亮点是什么？Chrome  97最大的亮点是WebTransport，得益于强大的QUIC协议，WebTranport可以提供更强更快的双向通信能力，有望用于游戏、直播、视频会议等低延时场景。
+* [web性能优化的15条实用技巧](https://mp.weixin.qq.com/s/9FwdceS1x96jLlU93kZBfw) 15个性能优化小结
+* [新一代状态管理工具，Pinia.js 上手指南](https://juejin.cn/post/7049196967770980389) Pinia.js 是新一代的状态管理器，由 Vue.js团队中成员所开发的，因此也被认为是下一代的 Vuex，即 Vuex5.x;
+* [用封装好的threejs库快速生成全景-Panolens.js](https://juejin.cn/post/7050283069743300638) 使用threejs来生成全景的方式，网上已经有很多大佬介绍过了，大致分为两种，一种是使用球体+1张全景图，另一种使用立方体+6张环境贴图, 今天使用更简的方式，使用现成的库来实现，Panolens已经帮我们把three中初始化场景、相机、控制器、鼠标事件等操作都封装好了，我们只需要关注图片即可
+* [JS 的 6 种打断点的方式，你用过几种？](https://juejin.cn/post/7041946855592165389) 谷歌浏览器调试工具，复杂问题排查 用的上
+* [冷门布局方法 tabel-cell 的可行性研究](https://mp.weixin.qq.com/s/a3HFIv74PH6LWgHnVRsfKg)  编写邮件HTML样式用的上
+* [低代码工具浅析](https://mp.weixin.qq.com/s/pBS727XUz5Y5upeWvtJ6Lw) 背景部分讲解了为什么最近几年低代码那么火
 
 ### 政采云前端周刊
-
-
-# 模板文件
+* [167期](https://weekly.zoo.team/detail/167) 6篇博文！
+* [从前端角度分析：西安一码通崩溃事件](https://juejin.cn/post/7044758038858694687?utm_source=gold_browser_extension) 紧跟热点文章
+* [降低前端业务复杂度新视角：状态机范式](https://mp.weixin.qq.com/s/SivN4Cbn1RRakEVuenZrHg)
+* [字节跳动2021年度回顾：上新3000万次代码，这是其中10个片段](https://mp.weixin.qq.com/s/CLNaRlJ-3v0hIWj0gnaQ1g)
+* [2021 年 JavaScript 大事记](https://mp.weixin.qq.com/s/-BzlW2FWF6YouWn64dOATQ)
+* [2021稀土掘金社区影响力榜单公布](https://juejin.cn/post/7045224156991848462) 《MySQL是怎样运行的：从根儿上理解MySQL》 书籍
+* [解读大前端的 2021 ：究竟“卷”出了什么名堂？](https://mp.weixin.qq.com/s/qIFi2HQL2QiDab_u0sbEjg)
