docs: 前端周刊笔记

--- a/fe_blog/2022_01_fe_week.md
+++ b/fe_blog/2022_01_fe_week.md
@@ -1,4 +1,4 @@
-## 2021-01-03 ~ 2021-01-09
+## 2022-01-03 ~ 2022-01-09
 
 ### 科技爱好者周刊
 * [一个程序员的财务独立之路](https://github.com/ruanyf/weekly/blob/master/docs/issue-191.md)
@@ -53,3 +53,41 @@ Safari Technology Preview 137 中已经正式启用 CSS 父元素选择器 :has(
 * [2021 年 JavaScript 大事记](https://mp.weixin.qq.com/s/-BzlW2FWF6YouWn64dOATQ)
 * [2021稀土掘金社区影响力榜单公布](https://juejin.cn/post/7045224156991848462) 《MySQL是怎样运行的：从根儿上理解MySQL》 书籍
 * [解读大前端的 2021 ：究竟“卷”出了什么名堂？](https://mp.weixin.qq.com/s/qIFi2HQL2QiDab_u0sbEjg)
+
+## 2022-01-10 ~ 2021-01-16
+
+### 科技爱好者周刊
+* [最大的机会来自新技术](https://github.com/ruanyf/weekly/blob/master/docs/issue-192.md) 本周干货内容较少
+```
+2007年1月9日，乔布斯从口袋里掏出一个小玩意，对着全世界说，今天苹果公司重新发明了电话。
+跟十五年前相比，我自己有一个变化。现在，我意识到了，所有的机会都是新技术带来的， 那些老技术的机会都有大公司赶在你的前头，把树上的果实吃掉一干二净，唯恐他人染指。 你想抓住最大的机会，只能去追踪那些新产品、新技术。
+
+CES 2022， 华硕展示了一款17寸的可折叠笔记本；
+CES 2022 上，三星公司推出了一款绿色遥控器，不使用干电池，而是使用太阳能和无线电波充电。
+诺顿360是销量很大的杀毒软件，去年做出了一个惊人的改变：内置了挖矿功能。
+元宇宙是一个大规模的、持久的、交互式的实时平台，由互相连接的虚拟世界组成，人们可以在其中进行社交、工作、交易、娱乐和创造。
+
+课堂是一个人造的美妙地方，老师拿着薪水关注你的想法，同学也关注你的想法。日常生活中，你再也不会有这样一群观众了。事实上，真实世界的大多数人并不在意你的想法。
+```
+* [暴力拒绝白嫖，著名开源项目作者删库跑路，数千个应用程序无限输出乱码](https://www.jiqizhixin.com/articles/2022-01-10-2)本周，两个广泛使用的 JS 库 faker.js 和 colors.js 出现了乱码问题。这竟然是作者本人提交的，他随后把代码库删了，原因是抗议大公司使用他的代码，却不付钱支持。本文详细介绍这件事。
+* [Paint of Persia](https://dunin.itch.io/ptop) 这个工具让你可以在屏幕任何一个窗口，框选一部分内容，将其变成像素画。
+* [emoji 搜索站](https://translate.yandex.com/?lang=zh-emj)
+
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [431期](https://weekly.75.team/issue431.html) 7篇博文
+* [Web 多线程开发利器 Comlink 的剖析与思考](https://mp.weixin.qq.com/s/gcIDZ-Kwk8WVyBA_CmLIuQ) JavaScript 属于单线程语言, 主观感知却是“多线程”, 事件循环 机制, 核心思想在于：任务队列 + 异步回调; Comlink 是由 Google Chrome Labs 开源出的项目，提供了前端多线程编程的 PRC 能力。
+* [性能优化，有时候是件体力活](https://mp.weixin.qq.com/s/_BKgmMtC6n3mAznCKDQUyA) 使用常规并且流行的 memo 以及 useMemo 来着手优化。
+* [深入探究：null 和 undefined 究竟有何区别？](https://mp.weixin.qq.com/s/aKMFjO_N8LoAKiZfW-lYTg) undefined, 这个变量从根本上就没有定义, 隐藏式 空值; null, 这个值虽然定义了，但它并未指向任何内存中的对象, 声明式 空值
+* [所谓“现代Web开发”，都是些什么妖魔鬼怪？](https://mp.weixin.qq.com/s/QNqIeFmiaDV0RSxsovZvgQ) 国外译文，吐槽博文，权当一乐，不收录。作者是一位出生于 70 年代的“技术愤青”unixsheikh。
+* [下载量和Vue一样大的开源软件被作者恶意破坏，数千款应用受到牵连](https://mp.weixin.qq.com/s/TDh4BPeYTITjJIZ4KH-4Jw)
+* [不优雅的 React Hooks](https://juejin.cn/post/7051535411042058271) 对React Hooks 的吐槽博文
+* [继往开来的 sass 3 代编译器：ruby sass、node-sass、dart-sass](https://mp.weixin.qq.com/s/tP_hXQ5Dc1wPKitTZ095kw) less、stylus 的编译器都是 js 写的，最特殊的是 sass，它的三代编译器分别是 ruby、c++、dart 写的，都不是 js。ruby sass、node-sass 都已经过时了，但是它们对前端工程化的贡献不可磨灭，dart-sass 代表着 sass 编译器的未来。
+
+### 政采云前端周刊
+* [168期](https://weekly.zoo.team/detail/168) 4篇博文， 其中 《解读大前端的 2021 ：究竟“卷”出了什么名堂？》 已在 167 期周刊出现过
+* [60+ 实用 React 工具库，助力你高效开发！](https://juejin.cn/post/7036162494573838367?utm_source=gold_browser_extension) React 开发使用工具库列表
+* [前端 CI/CD 上如何保证依赖安装速度达到优解？](https://xie.infoq.cn/article/675a4b724b9b504fe17f42eb6) 安装依赖时间优化， 这个频次太低，对开发流程影响不大， 不收录
+* [用信号来控制异步流程](https://juejin.cn/post/6911511105789493256) JS 异步流程 简单的小总结，不算高质不适合收录
