feat: 前端周刊笔记更新

--- a/fe_blog/2022_02_fe_week.md
+++ b/fe_blog/2022_02_fe_week.md
@@ -13,7 +13,7 @@
 * [Code2Flow](https://github.com/scottrogowski/code2flow) 这个工具自动分析代码，生成函数调用的流程图，即可视化显示所有函数的调用路径，支持 Python、Javascript、Ruby 和 PHP 等语言。
 
 ### 知乎： 前端快爆
-* 一个多月未更新了！
+* 暂无
 
 
 ### 奇舞周刊
@@ -24,7 +24,17 @@ jsx 通过 babel（render function） 转成 vdom， React 16 前 vdom 直接渲
 vdom 转 fiber 的过程叫做 reconcile，通过 requestIdleCallback 来空闲调度 reconcile， 处理完所有的 vdom 转 fiber 的 reconcile，就开始 commit，也就是更新到 dom。
 reconcile 的过程会提前创建好 dom，还会标记出增删改，那么 commit 阶段就很快了。
 ```
-* [从 chromium 源码来窥探浏览器的渲染](https://mp.weixin.qq.com/s/r1nAcEkEoE1D7CgQwqSe2Q)
+* [从 chromium 源码来窥探浏览器的渲染](https://mp.weixin.qq.com/s/r1nAcEkEoE1D7CgQwqSe2Q) 复习浏览器渲染相关知识
+```
+渲染进程主要由如下几个线程组成：
+
+GUI 渲染主线程： 解析 html，css，构建 DOM 树和 LayoutObject。
+JS 引擎线程： 执行，解析 JS 代码。
+合成器线程：进行分块操作，同时也负责接受用戶的滚动，输入，分发回调事件等。
+栅格化线程：将绘制命令转换为位图或者 GPU 能识别的纹理。
+```
+
+
 ### 政采云前端周刊
 * [172期](https://weekly.zoo.team/detail/172) 无博文
 
@@ -48,10 +58,24 @@ reconcile 的过程会提前创建好 dom，还会标记出增删改，那么 co
 * [初学者的 Web 开发教程（英文）](https://microsoft.github.io/Web-Dev-For-Beginners/#/) 微软提供的一个初级教程，讲授 JavaScript、CSS 和 HTML 的基本知识。
 
 ### 知乎： 前端快爆
-* [2022，前端工具链十年盘点](https://zhuanlan.zhihu.com/p/462985064)
+* [2022，前端工具链十年盘点](https://zhuanlan.zhihu.com/p/462985064) 前端快爆 小组 梳理的前端发展简史
+```
+阿里妈妈前端快爆从 2017 年开始，已坚持更新到 2022 年。过去 5 年间，我们致力于传达前端业界的更迭，也慢慢分化出来了重客观信息的新闻版块、重知识聚合的专题板块、重碎片化分享的百宝箱板块。
+```
 
 ### 奇舞周刊
 * [435期](https://weekly.75.team/issue435.html) 8篇博文
+* [函数式编程（FP）](https://mp.weixin.qq.com/s/ttQy_v-_QBKjcz2LPZvfNQ) 函数式编程（functional programing）是编程范式之一。我们常见的范式还有面向过程、面向行为、面向对象等。 该博文 对函数式编程 总结很全面。
+* [协同文档工作机制简介](https://mp.weixin.qq.com/s/BtoM_4Gy5v4I0okpMukATg) 钉钉在线文档已经三年了？ 还是不如 腾讯在线文档 普及率高！
+* [HTTP缓存协议实战](https://mp.weixin.qq.com/s/23WJXJFGJ-iMP6x-lFQ8og) 缓存的本质就是用空间换时间，以临时存储的数据暂时代替数据源中读取最新的数据。
+* [一种开发 Chrome 扩展程序的新姿势](https://mp.weixin.qq.com/s/e5-4TrvWX8KBv6zkbc_HtQ) 开发 Chrome 实践小技巧
+* [浏览器的 5 种 Observer，你用过几种？](https://mp.weixin.qq.com/s/-fLZe164aWAaPJ55iZ_m2w) 信息采集，数据上报相关， 可惜没附上 每种 Observer 的浏览器内容
+* [React hooks 状态管理方案解析](https://mp.weixin.qq.com/s/MmBFwrAUhRzROLllWUa0gg)
+* [WebAssembly 2021 年回顾与 2022 年展望](https://mp.weixin.qq.com/s/1ZW8_XW1yqqSeBAAYWNUdg) wasm 的总结文章， 这块业界文章还是太少
+* [Wasm 玩出花？在浏览器中运行虚拟机！](https://mp.weixin.qq.com/s/RQq8K7GmLysAx55Vuk-K5A) wasm 应用实践博文
 
 ### 政采云前端周刊
 * [173期](https://weekly.zoo.team/detail/173) 三篇博文 
+* [零代码真香：但还离不开程序员](https://juejin.cn/post/7053807007169511437) 评论： 它有先天缺陷，随着业务复杂度的上升，缺陷就越明显——永远无法把世界上所有事情抽象成一个模板。 
+* [浏览器控制台输出一个南山大王，2022豹富！](https://juejin.cn/post/7062324636825944077?utm_source=gold_browser_extension#heading-5)
+* [前端灰度发布落地方案](https://mp.weixin.qq.com/s/Gx2muPw2T9zYCdBPzIbzbg)
