docs: 前端周刊笔记更新

--- a/fe_blog/2022_02_fe_week.md
+++ b/fe_blog/2022_02_fe_week.md
@@ -30,9 +30,9 @@ reconcile 的过程会提前创建好 dom，还会标记出增删改，那么 co
 * [动手打造一款 canvas 排版引擎](https://mp.weixin.qq.com/s/8I4ZrXysU4NxLVd8Jvdcyg) 实现的库和实现思路都值得借鉴
 * [如何利用 SCSS 实现一键换肤](https://juejin.cn/post/7062496975454732301) 写的不够清晰， 评论区分享的博文质量更高
   * [基于less和sass的在webpack或vite中的动态主题的实现方案](https://juejin.cn/post/6966173655470440456) 使用插件实现换肤
-* [2021 大前端技术回顾及未来展望](https://mp.weixin.qq.com/s/HfZDrrqDNUVpnU-aegKxcg)
+* [2021 大前端技术回顾及未来展望](https://mp.weixin.qq.com/s/HfZDrrqDNUVpnU-aegKxcg) 业界动态总结，TypeScript 是否能得到浏览器和 Node.js 原生支持呢？
 * [sveltejs](https://www.sveltejs.cn/) Svelte 是一种全新的构建用户界面的方法。传统框架如 React 和 Vue 在浏览器中需要做大量的工作，而 Svelte 将这些工作放到构建应用程序的编译阶段来处理。
-* [来自未来，2022 年的前端人都在做什么?](https://mp.weixin.qq.com/s/triP_hXILSWq37DIGz4VNg)
+* [来自未来，2022 年的前端人都在做什么?](https://mp.weixin.qq.com/s/triP_hXILSWq37DIGz4VNg) 业界动态总结2
 ```
 渲染进程主要由如下几个线程组成：
 
