docs: 前端周刊笔记更新

--- a/fe_blog/2022_03_fe_week.md
+++ b/fe_blog/2022_03_fe_week.md
@@ -1,7 +1,7 @@
 ## 2022-02-28 ~ 2022-03-06
 
 ### 科技爱好者周刊
-* [196期 - 如果这个世界有快乐机](https://github.com/ruanyf/weekly/blob/master/docs/issue-197.md) 
+* [197期 - 如果这个世界有快乐机](https://github.com/ruanyf/weekly/blob/master/docs/issue-197.md) 
 ```
 上个世纪70年代，哈佛大学的哲学教授诺齐克（Robert Nozick）提出一个问题， 如何证明享乐主义（追求快乐和满足）是人类的行为目的？
 他在著作里面，提出了三种可能，会让人放弃快乐机。
@@ -49,3 +49,61 @@
 * [bit 专题：由组件复用到 bit 适用场景](https://juejin.cn/post/6862221477509660686) 2020年的低质文章
 * [淘宝店铺 TypeScript 研发规约落地实践｜技术详解](https://mp.weixin.qq.com/s/4ckz3zBmG6N0XppxZY7e9w) 高质的TS 迁移落地实践博文
 * [前端技术分享：页面性能优化问题复盘](https://juejin.cn/post/7064405926035324964) 根据火焰图 排查问题的方法值得借鉴
+
+
+## 2022-03-07 ~ 2022-03-13
+### 科技爱好者周刊
+* [198期 - 美国制造是否可能](https://github.com/ruanyf/weekly/blob/master/docs/issue-198.md) 
+```
+2015年，国内曾经有一个研究，逐项比较中国和美国的生产成本，结果发现每一项成本都是美国便宜。
+只有一项成本是中国便宜，大家恐怕都猜到了，那就是工资，美国的劳动力时薪是中国的4.8倍。大部分产业在中国只是因为中国工资较低！
+结合《人口大逆转》中国工人工资低优势可能 一去不复返！
+
+Deno 其实比 Node.js 更易用。它没有 package.json，并且与浏览器使用同一套 API，原生支持 TypeScript 和 JSX 文件。它还可以让同一套代码，运行在前端和后端。
+```
+* [印度反超中国，成为世界人口第一大国](https://mp.weixin.qq.com/s/1ztbaqTOemVR0njkwRHkEA) 2022年3月4日，根据两国人口数字统计，印度超越中国成为世界人口第一大国。从商周朝起，中国一直是全球人口第一大国，如今让出“第一把交椅”，你认为是好事还是坏事？
+* [Datawrapper](https://www.datawrapper.de/charts) 著名的数据可视化生成工具，只要在网页上提交数据，经过几步配置，就能生成杂志级的可视化图表。不需要注册就可以免费使用。
+* [程序员做饭指南](https://github.com/LeeJim/HowToCookOnMiniprogram) 又刷到这个关注异常高的 gitHub项目哈
+
+### 知乎： 前端快爆
+* [技术周刊 2022-03-07: Cascade Layers 已支持，Chrome 100 将到来](https://zhuanlan.zhihu.com/p/477251430)
+```
+Chrome 99 发布: 对于 HTMLInputElement，支持了 showPicker() 方法，可以直接唤起 <input type=color>、<input type=date>、<input type=time>和<input type=file> 的浮层；
+新增了一批 Canvas 2D 新特性，如 ContextLost、ContextRestored 事件，reset() 方法和圆锥渐变；
+随着 Chrome 99 的发布，Chrome 100 将很快到来，届时 User-Agent 监测的代码可能受到三位数版本号的影响。在最新的 Chrome 中，可以通过 chrome://flags/#force-major-version-to-100开启测试。
+
+Apple、Bocoup、Google、Igalia、Microsoft 和 Mozilla 启动了 Interop 2022 项目：
+该项目旨在提升网页功能的可移植性，保证 Web 新功能的跨平台运行能力；
+
+Node.js 发布 17.6.0，试验性支持 import 远程的 ECMAScript Modules，需要打开 --experimental-network-imports。
+
+TypeScript 正式发布 4.6：
+类型系统优化：
+构造器方法中，放宽了对 super() 前内容的限制；
+解构后的 Discriminated Unions 也能正常完成类型推断；
+递归模版语法中的类型校验得到了加强；
+通过 rest 方式定义的函数参数也支持了控制流推断；
+解构语法将丢弃无法解构的 Class 类成员变量；
+工具链更新：
+tsc 支持设置 es2022 为 target 了；
+JavaScript 文件也将暴露更多语法和绑定异常。
+```
+
+### 奇舞周刊
+* [438期](https://weekly.75.team/issue438.html) 9篇博文
+* [【雷火UX数据可视化】浅析网页动画](https://mp.weixin.qq.com/s/tia5gvOqILknMXBx8ebMrw) 常网页开发中使用最多的是CSS补间动画，这也能完成交互反馈等大多数的需求。
+* [React内部的性能优化没有达到极致？](https://mp.weixin.qq.com/s/zbDW3pBj-w9m59o_4SIfZA) 1）点击按钮，触发状态更新；2）组件render 两种场景下优化小结
+* [关于依赖管理的真相 — 前端包管理器探究](https://mp.weixin.qq.com/s/t6RZAKb6mXTfXl7XbpZ_vw) 对Node依赖总结比较完整的博文
+* [开发一款专属的 VSCode 代码提示插件](https://mp.weixin.qq.com/s/e2gfSnBrR6rn7x37ZGLplg) 据不完全统计，VsCode插件市场中的插件数量已经超过了3万，由此可见大家的热情有多高。
+* [一文彻底搞懂原型链！](https://mp.weixin.qq.com/s/fuzsWCiaZJnyvAXAG-Lj7A) JS书里内容提炼，并添加代码实例讲解； 原型链的尽头是Object.prototype.__proto__，为null。
+* [Decorator 装饰器](https://mp.weixin.qq.com/s/DexxNuRG-x29dZrWCcJDuQ) ES7 提案: Decorators 装饰器
+* [编写 API 接口文档更好的方式](https://mp.weixin.qq.com/s/V4XHSmYNH255iLYjwxKsIQ) 程序员最讨厌的两件事：1. 写文档，2. 别人不写文档。Apifox 推广文， 之前使用过， 上手成本并不低， 想要实现 简单 postman 免登陆 cookies 共享都得折腾半天！
+* [Solid.js 就是我理想中的 React](https://mp.weixin.qq.com/s/0sGJ9r_9C9EPzliEkUuyTg) solid.js 布道博文
+* [你不知道的vscode之空间控制](https://mp.weixin.qq.com/s/JG9kbTuAd-5FWzgzqCvdSQ) DIY 新概念 空间控制，花里胡哨的 VS code 小技巧，感觉不是特别实用!
+
+
+### 政采云前端周刊
+* [176期](https://weekly.zoo.team/detail/176) 3篇博文
+* [SWR](https://swr.vercel.app/zh-CN) 用于数据请求的 React Hooks 库 – SWR React
+* [你还在 Docker 中跑 MySQL？恭喜你，可以下岗了！ ](https://www.cnblogs.com/javastack/p/15263516.html) 列举了N条不适合在 Docker 跑SQL的原因
+* [漫画图解 Chrome 浏览器从输入到渲染的原理（简单易懂）](https://mp.weixin.qq.com/s/KyJZQJsMMGqa91tVLljyvQ) 这。。。，面试题答案还出漫画了？？
