docs: 前端周刊笔记-第一部分

--- a/fe_blog/2022_03_fe_week.md
+++ b/fe_blog/2022_03_fe_week.md
@@ -107,3 +107,37 @@ JavaScript 文件也将暴露更多语法和绑定异常。
 * [SWR](https://swr.vercel.app/zh-CN) 用于数据请求的 React Hooks 库 – SWR React
 * [你还在 Docker 中跑 MySQL？恭喜你，可以下岗了！ ](https://www.cnblogs.com/javastack/p/15263516.html) 列举了N条不适合在 Docker 跑SQL的原因
 * [漫画图解 Chrome 浏览器从输入到渲染的原理（简单易懂）](https://mp.weixin.qq.com/s/KyJZQJsMMGqa91tVLljyvQ) 这。。。，面试题答案还出漫画了？？
+
+## 2022-03-14 ~ 2022-03-20
+
+### 科技爱好者周刊
+* [199期 - 俄罗斯的 HTTPS 证书问题](https://github.com/ruanyf/weekly/blob/master/docs/issue-199.md) 
+```
+上周，国外网友发现，一家西方的证书机构拒绝为俄罗斯域名颁发 HTTPS 证书，甚至还吊销已经颁发的有效证书。
+一旦因为政治原因吊销 HTTPS 证书，或者让俄罗斯断网，互联网的中立性就荡然无存，不再是人人都可以使用的技术基础设施了。这等于把“互联网武器化”，只要你是我眼中的恶棍，我就不同意你使用互联网。
+开了这种危险的先例，把互联网当作武器，互联网从此就变成了国防设施。国与国之间都搞自己的证书、自己的域名、自己的国际网关，严格区分网络国境线。互联网创立时的开放、自由、统一、造福人类的梦想，灰飞烟灭。
+
+最昂贵的机器: 荷兰阿斯麦尔公司（ASML）生产的 EUV 光刻机，很可能是世界最昂贵的机器。目前最先进的计算机芯片，都必须使用这种机器才能生产。
+英特尔公司订购了最新型号的这种机器，售价是3.4亿美元/台（约22亿人民币），预定2024年交货。
+EUV 光刻机全世界目前只有三个用户：台积电、英特尔和三星。阿斯麦尔公司只向他们三家供货，即使如此还供不应求，必须排队提货。
+
+TypeScript 编译器 tsc 是用 JavaScript 写的，非常慢。作者打算用 Rust 写一个非官方的编译器。（官方应该早点实现重构编译器 - 使用其他语言编写）
+
+一个坏想法最后消失的原因，就是它被遗忘了。这就是 Tyler Cowen 的名言：“花尽可能少的时间谈论其他人的错误。”总之，让我们传播好想法，遗忘坏想法。
+
+NFT 绝对不会为你提供艺术品的版权、使用权或所有权，没有任何一个国家的法律承认 NFT。
+你购买 NFT，实际得到的只是一张收据，其他什么都没有。NFT 的有趣之处是，它让你可以倒卖这张收据。
+
+缓慢的、持久的、有纪律的努力，最终会导致令人难以置信的结果。
+每当我无法忍受日常生活时，我就提醒自己，没有什么比每天坚持做下去更重要了。虽然我很难看到未来会怎样，但我知道持久性具有强大的威力，就像一句古老格言说的“继续去做”（keep doing）。
+```
+* [CRDT 资料库](https://wiki.nikitavoloboev.xyz/distributed-systems/crdt) CRDT 是一种多人协同算法，常用于多人同时编辑文档时的同步。这个网页收集各种 CRDT 相关资料。
+
+### 知乎： 前端快爆
+* [技术周刊 2022-03-16：React 18 首个 RC 发布，数周后将发布正式版](https://zhuanlan.zhihu.com/p/482105073)
+
+### 奇舞周刊
+* [439期](https://weekly.75.team/issue439.html) 8篇博文
+
+### 政采云前端周刊
+* [177期](https://weekly.zoo.team/detail/177) 5篇博文
