docs: 前端周刊笔记更新

--- a/fe_blog/2022_04_fe_week.md
+++ b/fe_blog/2022_04_fe_week.md
@@ -32,7 +32,24 @@ Parcel 发布 2.4.0。默认使用了 Rust 实现的 Parcel CSS，把 CSS 压缩
 
 ### 奇舞周刊
 * [441期](https://weekly.75.team/issue441.html) 8篇博文
+* [基于 TypeScript 理解程序设计的 SOLID 原则](https://mp.weixin.qq.com/s/mz5S1iiRWkk-KKJg5lOOJQ) 编程思想： SOLID 原则
+```
+Single Responsibility Principle：单一职责原则
+Open Closed Principle：开闭原则
+Liskov Substitution Principle：里氏替换原则
+Interface Segregation Principle：接口隔离原则
+Dependency Inversion Principle：依赖倒置原则
+```
+* [不用任何框架开发 Web 应用程序，可能吗？](https://mp.weixin.qq.com/s/nGVlTcBIR10uAoLr1vN_Pw) 不使用框架等同于重复造轮子吗？ 国外译文， 提出了一个非主流的 观点， 文章夸大了框架的副作用， 虽然不用框架的细节写了不少，但很难实践！
+* [前端单测，为什么不要测 “实现细节”？](https://juejin.cn/post/7079232962025226277) 测试本身就很困难了，我们不应该再弄那么多规则来让测试变得更复杂。
+* [私有属性的 6 种实现方式，你用过几种？](https://mp.weixin.qq.com/s/SusZu6rdVijZ-6seg9oa0Q) 茴香豆 的N中写法？
+* [巧用 background-clip 实现超强的文字动效](https://mp.weixin.qq.com/s/nf1PjrsKXCiGiRQsTTqqvA) CSS实现的文字动效
+* [用 canvas 搞一个手势识别？醍醐灌顶](https://juejin.cn/post/7079830929048338463) 比较复杂的cavans 实现逻辑，先收后看
+* [C不再是一种编程语言](https://mp.weixin.qq.com/s/cDrI3iblZhBkgR3XitVKKA) 这篇文章的核心并不是“C 不再是编程语言”，而是“C 不仅仅是一种编程语言”
+* [Chrome 100支持多屏应用了！](https://mp.weixin.qq.com/s/DzpSn8VTfGhF-rN89E158A) 2008年，秘密开发2年的Chrome正式发布，14年之后，Chrome的版本号达到了100。
 
 
 ### 政采云前端周刊
 * [179期](https://weekly.zoo.team/detail/179) 2篇博文
+* [Webpack 原理系列九：Tree-Shaking 实现原理](https://segmentfault.com/a/1190000040814997) ESM 下模块之间的依赖关系是高度确定的，与运行状态无关，编译工具只需要对 ESM 模块做静态分析，就可以从代码字面量中推断出哪些模块值未曾被其它模块使用，这是实现 Tree Shaking 技术的必要条件。
+* [JS：JS中常见的 “函数名 is not a function” 错误](https://www.cnblogs.com/forforever/p/12374589.html) js有声明前置，函数和变量的声明都会前置
