docs: 前端周刊笔记更新

--- a/fe_blog/2022_04_fe_week.md
+++ b/fe_blog/2022_04_fe_week.md
@@ -53,3 +53,37 @@ Dependency Inversion Principle：依赖倒置原则
 * [179期](https://weekly.zoo.team/detail/179) 2篇博文
 * [Webpack 原理系列九：Tree-Shaking 实现原理](https://segmentfault.com/a/1190000040814997) ESM 下模块之间的依赖关系是高度确定的，与运行状态无关，编译工具只需要对 ESM 模块做静态分析，就可以从代码字面量中推断出哪些模块值未曾被其它模块使用，这是实现 Tree Shaking 技术的必要条件。
 * [JS：JS中常见的 “函数名 is not a function” 错误](https://www.cnblogs.com/forforever/p/12374589.html) js有声明前置，函数和变量的声明都会前置
+
+
+## 2021-04-4 ~ 2021-04-10
+### 科技爱好者周刊
+* [202期 - 三个有启发的学习方法](https://github.com/ruanyf/weekly/blob/master/docs/issue-202.md) 
+```
+1）看似最笨的学习方法——笔记和记忆力——偏偏造就了最高的开发效率；
+2）如果没有对旧事务进行大量练习，你不太可能发现新事物；
+3）努力学习你最感兴趣的东西。
+汽车的远程拍照 功能因政策关闭， 2021年10月施行的《汽车数据安全管理若干规定（试行）》。
+元宇宙 招聘会： 一家美国软件公司举办了虚拟招聘会。雇主和求职者在约定的时间，戴上 VR 头盔，进入这家公司开设的虚拟会场。
+毫米波雷达的巨大意义: 毫米波 60Ghz 是一个公共频率，就像 Wifi 的2.4Ghz 和 5Ghz 那样，可以自由使用。这个频率的波长短，导致穿透性差，但是它的带宽大，可以传送大量信息，适合当作近距离雷达使用，比如隔空感知手势（下图），有着巨大的应用前景。
+航空业使用的技术都很老，原因是为了保证安全，整个行业有极其严格的监管。设备和技术的更新，必须获得监管部门的批准，需要等待大量时间，投入大量资金。-- 《航空业与 5G 的冲突》
+```
+* [从财报看华为2022年的现状](https://weibo.com/ttarticle/p/show?id=2309404754845360849115) 华为最近公布了2021年的财报，收入比去年下滑28.6%，但是利润增长75.9%。作者从财报分析华为的现状，以及将来的发展思路。
+* [浏览器的文件访问 API 入门（英文）](https://css-tricks.com/getting-started-with-the-file-system-access-api/) 浏览器现在提供了文件访问 API（File System Access API），允许网页 JS 脚本读写本地文件，本文是一个详细的介绍。
+
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [442期](https://weekly.75.team/issue442.html) 8篇博文
+* [Amazing！巧用 CSS 视差实现酷炫交互动效](https://mp.weixin.qq.com/s/5bNWeGewu67qQ2ICM7O0Sw) 本文将介绍利用 CSS 实现滚动视差效果的一个小技巧
+* [你不知道的setup](https://mp.weixin.qq.com/s/hYYNbMUkheHVgzi26rnWPQ)  Vue3，新出现的setup启动函数 介绍
+* [深入 canvas/svg 的文本整形渲染](https://mp.weixin.qq.com/s/PXIGOmexewvfcQkThFjuOw) canvas的ctx.measureText()，svg的getComputedStyle()，都可以将任意整段文字内容传入来测量。
+* [打造轻量级 WebIDE，看这一篇文章就够啦](https://mp.weixin.qq.com/s/75RPsB6jjOLm-c8TSt_m-Q) 如何实现轻量级， web IDE - 低代码平台相关， 使用最新 的 monaco-editor 代码编辑器库实现；
+* [得物AppH5秒开优化实战](https://mp.weixin.qq.com/s/23ZFPK4CaCkinwpZ3SG9Rw) 开始我们的H5页面秒开率只有30%左右，现在我们的H5页面秒开率达到了 75%。这中间巨大的差异究竟有哪些黑科技在里面？
+* [请问：怎么实现大文件快速上传？](https://juejin.cn/post/7074534222748188685) 大文件快速上传的方案，相信你也有过了解，其实无非就是将 文件变小，也就是通过 压缩文件资源 或者 文件资源分块 后再上传。
+* [比 eval 和 iframe 更强的新一代 JavaScript 沙箱！](https://mp.weixin.qq.com/s/wAI-L3we6uK0HvvPtOcIjg) 进入 statge3 的新的 JavaScript 提案：ShadowRealm API。
+* [Go 中的泛型：激动人心的突破](https://mp.weixin.qq.com/s/Zk24GsvpryB64hlSAp06Iw) Go 语言最新版本支持泛型
+
+### 政采云前端周刊
+* [180期](https://weekly.zoo.team/detail/180) 1篇博文
+* [Vue3为何使用Proxy实现数据监听](https://zhuanlan.zhihu.com/p/182403324) vue3响应式数据放弃了Object.define Property，而使用Proxy来代替它;
