docs: 前端周刊笔记更新

--- a/fe_blog/2022_04_fe_week.md
+++ b/fe_blog/2022_04_fe_week.md
@@ -1,4 +1,4 @@
-## 2021-03-28 ~ 2021-04-03
+## 2022-03-28 ~ 2022-04-03
 
 ### 科技爱好者周刊
 * [201期 - 中国需要成立半导体部](https://github.com/ruanyf/weekly/blob/master/docs/issue-201.md) 
@@ -55,7 +55,7 @@ Dependency Inversion Principle：依赖倒置原则
 * [JS：JS中常见的 “函数名 is not a function” 错误](https://www.cnblogs.com/forforever/p/12374589.html) js有声明前置，函数和变量的声明都会前置
 
 
-## 2021-04-4 ~ 2021-04-10
+## 2022-04-4 ~ 2022-04-10
 ### 科技爱好者周刊
 * [202期 - 三个有启发的学习方法](https://github.com/ruanyf/weekly/blob/master/docs/issue-202.md) 
 ```
@@ -87,3 +87,90 @@ Dependency Inversion Principle：依赖倒置原则
 ### 政采云前端周刊
 * [180期](https://weekly.zoo.team/detail/180) 1篇博文
 * [Vue3为何使用Proxy实现数据监听](https://zhuanlan.zhihu.com/p/182403324) vue3响应式数据放弃了Object.define Property，而使用Proxy来代替它;
+
+
+## 2022-04-11 ~ 2022-04-17
+### 科技爱好者周刊
+* [203期 - 英国的名校签证，伯克利的计算机教育](https://github.com/ruanyf/weekly/blob/master/docs/issue-203.md) 
+```
+去年的2021届，伯克利应届计算机系本科毕业生有1300多人！班级规模越大，教学效果越差。
+研发协同工具 Apipost，基于 postman 集成的开发工具， 国产相关软件挺多, 类似之前的 Apifox；
+可以预料，只要机器狗之类的智能行驶装置出现，就一定会有人为它装上武器。而且，这类无人武器将在未来的战场得到大量应用，未来的战争很可能都是无人机、无人战车、机器狗、机器士兵之类的装置在打。
+很多手机都使用指纹认证，美国的一个安全团队展示了快速破解技术。他们可以提取出租车门、iPhone 屏幕、酒杯等处留下的指纹，甚至还可以从高分辨率照片上提取指纹。
+
+当我们宣传保护生物多样性的时候，常常被问起，少了一个物种会怎么样？
+对于这个问题，有一个精妙的比喻，中国有那么多汉字，少了一个汉字会怎么样？
+-- 周浙昆，植物学家
+```
+* [lexical](https://lexical.dev/) 脸书开源了最新的文本编辑器，目前脸书和 Instagram 官网用的都是它。它替代了脸书原来的 Draftjs，跟 Prosemirror 相比，更轻量、可配置性更高，缺点是文档目前不全。
+
+
+### 知乎： 前端快爆
+* [技术周刊 2022-04-13：Chrome 100、React 18 发布](https://zhuanlan.zhihu.com/p/499149712)
+```
+React 18 正式版发布发布，主要有以下更新：
+新的客户端渲染 API ：ReactDOM.createRoot（用于替换 ReactDOM.render）。
+服务端渲染 API 更新，完全支持了服务端的 Suspense 和流式 SSR。
+自动批处理优化（解决了异步回调中无法批处理的问题）。
+不再存在并发模式（Concurrent Mode），而是并发特性（Concurrent Feature），侵入性更低
+新增 Hooks API：
+useId: 为组件生成唯一的 ID。
+useSyncExternalStore：可以在并行渲染时避免 UI 状态和外部数据源割裂，官方推荐所有三方状态库都切换为这个 API，react-redux 8.0.0-alpha 1 开始已切换为此 API。
+useInsertionEffect：用于给 CSS 库在全局插入 DOM 节点，比如 <style> 或 SVG <defs>，相比 useLayoutEffect，这个方法的回调过程中拿不到 DOM 节点的 ref。
+用于并发渲染的 useDeferredValue、startTransition、useTransition。
+
+不再支持任何版本的 IE 浏览器。是因为 React 18 中引入的新特性是使用现代浏览器特性构建的，比如微任务，这些特性在 IE 中是无法充分填充的。而 IE 浏览器也将于 2022 年 6 月 15 日停止支持。
+
+Rome Formatter 发布第一个版本，目前仅支持 JavaScript 和 TypeScript 的格式化，这是 Rome 自去年宣布用 Rust 重写后发布的第一个对外可用版本。当前性能比 Prettier 快 9-12 倍。
+点评：Rome 的愿景是替代 Babel、ESLint、webpack、Prettier、Jest 等工具，建立性能更快的大一统前端工具库，隔壁 SWC 和 esbuild 将迎来强有力的竞争对手。
+
+esbuild 0.14.31 开始，支持了压缩 CSS 容器查询语法，至此 esbuild 几乎支持了所有常见的 CSS at rule。
+
+Android 13 开发者预览版 2 发布，支持了 COLRv1 彩色字体格式，并将系统表情符号更新成了 COLRv1 格式。COLRv1 是一种支持渐变、性能更好、体积更小的彩色字体格式，旨在用来取代 OT-SVG 格式。此前 Chrome 98 和 Edge 98 已经支持。更多请阅读《iconfont 支持全新的彩色字体图标》。
+```
+* [Chrome 100 发布](https://developer.chrome.com/blog/new-in-chrome-100/) 浏览器版本号进入三位数时代，官方还发布了一个历史版本时间轴的回顾页面。
+```
+精简 User-Agent 字符串
+Chrome 100 将是最后一个默认支持未缩减的用户代理字符串的版本。这是用新的 User-Agent Client Hints API 替换 User-Agent 字符串策略的一部分。
+支持多屏窗口放置 API（Multi-Screen Window Placement API）
+通过这个 API 可以获取多个显示器信息以及指定将窗口放置在哪个显示器中，这对于 Web 演示类工具非常有用。
+新增window.screen.isExtended，获取是否有多个屏幕
+新增 window.getScreenDetails()，获取多个屏幕的信息，返回字段中 isPrimary代表是否为主屏幕。首次请求时会弹出授权对话框。
+新增 screenschange 事件，检测屏幕设置何时发生变化。
+新增 currentscreenchange事件，检测当前屏幕发生的变化。
+支持使用 window.open()、window.moveTo()将页面在指定的屏幕中打开。
+Element.requestFullscreen()新增 screen 选项，支持元素在指定的屏幕中全屏显示。
+更多信息请参阅：《使用多屏幕窗口放置 API 管理多个显示器》。
+新增 CSSmix-blend-mode: plus-lighter
+这可以实现任意两个 DOM 元素交叉淡入淡出的过渡效果，这是实现 Shared Element Transitions 规范的重要组成部分，该规范的核心诉求就是解决元素过渡。此前，Firefox 99、Safari 9.1 已支持。更多请参阅：《交叉淡入淡出任意两个 DOM 元素目前是不可能的》
+AbortSignal.prototype.throwIfAborted()
+如果信号被中止，Chrome 现在会抛出一个 AbortSignal 对象的 reason。该方法允许信号处理函数检查信号的中止状态并传播中止原因。例如，它可以在可能改变信号状态的异步操作之后被调用。此前 Firefox 97 已支持。
+
+```
+
+### 奇舞周刊
+* [443期](https://weekly.75.team/issue443.html) 9篇博文
+* [现代 CSS 解决方案：CSS 数学函数之 calc](https://mp.weixin.qq.com/s?__biz=Mzg2MDU4MzU3Nw==&mid=2247491089&idx=1&sn=84aecbf783859c930bf57660b46d06ef&chksm=ce257de7f952f4f17b49c890910d995362a1a7247fdf20bd427d868a15cef08e1c3d9e68eba1&token=363949812&lang=zh_CN#rd) CSS calc 用法详解
+* [什么？函数类型重载还可以动态生成？](https://mp.weixin.qq.com/s/dW9Au8agrxtb7dlByFfHHg) ts 函数重载一共有三种写法：declare function、interface、交叉类型 &。
+* [React 18 全览](https://mp.weixin.qq.com/s/N6MBhe4fkHO49ZqVNBPflQ) 在 2022 年 3 月 29 日，React 18 正式版终于和大家见面了
+```
+并发模式， 普通开发（业务代码）不会有任何变化；
+Server Component 叫服务端组件，目前还在开发过程中，没有正式发布
+```
+* [40行代码实现React核心Diff算法](https://mp.weixin.qq.com/s/wlb_CtUsoiDIZwqHV0Mm_w) Diff算法需要考虑多少种情况呢？大体分三种: 1)节点属性变化；2）节点增删 3）节点移动
+* [如何使用 JS 实现一个 HTML 解析器](https://mp.weixin.qq.com/s/p6bF6zzoMcIfjfsVanPhWA) 浏览器解析HTML 简化版
+* [Chrome DevTools Inspector 扩展实践](https://mp.weixin.qq.com/s/gsq9du1Xaabl1YlJm8ONIQ) 如何 开发 react native 调试工具
+* [前端现代包管理器的进化史](https://mp.weixin.qq.com/s/8C9L_z64NUI9kWan64-qAg) PNPM 为什么能逐渐替换 NPM？
+```
+pnpm在解决多项目复用依赖问题上采取了硬链接的方式: 硬链接与平时我们使用比较多的软链接不同的是，他会直接指向磁盘中原始文件所在的地址。
+```
+* [前端大概要的知道 AST](https://mp.weixin.qq.com/s?__biz=MzkxNTIwMzU5OQ==&mid=2247493095&idx=1&sn=13396931f3b88cd419575b25ac75f174&chksm=c1601687f6179f91d8c1197f41c6439493d0871e08878fffa473800ff343fe5b409044b3d2e8&token=363949812&lang=zh_CN#rd) 实现一个 ESlint 插件 讲解 AST（抽象语法树）
+* [W3C 发布 WebAssembly 2.0 初版草案](https://www.oschina.net/news/191993/wasm-2-0-public-drafts)
+
+
+### 政采云前端周刊
+* [181期](https://weekly.zoo.team/detail/181) 暂无博文
+
+## 2022-04-18 ~ 2022-04-24
+
+## 2022-04-25 ~ 2022-05-01
