docs: 前端周刊笔记更新

--- a/fe_blog/2022_04_fe_week.md
+++ b/fe_blog/2022_04_fe_week.md
@@ -235,6 +235,23 @@ v3版本对安全性要求更高了，这导致插件的灵活性也降低了，
 
 ### 奇舞周刊
 * [444期](https://weekly.75.team/issue444.html) 8篇博文
+* [浅谈文档的实时协同编辑](https://mp.weixin.qq.com/s/Ba-3fMQXNXqIzVTjVUrWtQ) 1）协同编辑的场景定义及分类； 2）协同编辑的数据模型 3）协同编辑的解决方案和实践
+* [手写 css-modules 来深入理解它的原理](https://mp.weixin.qq.com/s/CX-LC014iZ4vpTko59Sf7A) 组件除了 JS 还有 CSS 呀，CSS 却一直没有模块隔离的规范。CSS 的隔离主要有两类方案，一类是运行时的通过命名区分，一类是编译时的自动转换 CSS，添加上模块唯一标识。
+* [边缘渲染是如何提高前端性能的？](https://mp.weixin.qq.com/s/n7C-XCnmZ-Imx04FbV3zQg) 前端定义新名词系列，标题都写错， 不收录！
+* [现代 CSS 解决方案：数学函数之 min、max、clamp](https://mp.weixin.qq.com/s/a6CxCvmhQz4Os4j_60gnOg) 合理运用 min()、max()、clamp()，是构建现代响应式布局的重点，我们可以告别传统的需要 JavaScript 辅助的一些方案，基于 CSS 这些数学函数即可完成所有的诉求。
+* [Web Worker](https://mp.weixin.qq.com/s/OLUN9mHw3S3oBsfd6SONcw) 三种Web Worker 用法简述
+* [学会Sequelize，让你操作数据更丝滑](https://mp.weixin.qq.com/s/wPX1ihyj8Gw5E9Wg5y5yZg) 难得看到 Sequelize 博文， 实战演练部分有干货
+* [2022 年值得关注的 DevOps 趋势和最佳实践](https://mp.weixin.qq.com/s/tg5vAzdwMgknUwWQboGsAQ) DevOps 集开发与运营于一体，已经非常有名推广软文，不收录
+* [拒绝“数字难民”，如何拯救困在APP里的爸妈？](https://mp.weixin.qq.com/s/yBACCN--YD6b1XIH9e0zvQ) 介绍几款适合老年人的 APP，及其对应简介
+
+
+
 
 ### 政采云前端周刊
 * [183期](https://weekly.zoo.team/detail/183) 6篇文章
+* [React 顶层 API – React React](https://zh-hans.reactjs.org/docs/react-api.html#reactforwardref)
+* [万字长文 | Seneca: 用Node.js搭建你的微服务架构](https://zhuanlan.zhihu.com/p/361134769) Node.js 搭建微服务入门教程
+* [浅谈控制反转与依赖注入](https://zhuanlan.zhihu.com/p/33492169) 很有趣的技术博文
+* [Redux持久化插件-解决刷新页面数据丢失问题](https://juejin.cn/post/6885907913265971208) 
+* [Axure RP 9 9.0.0.3728 中文破解版](https://www.macwk.com/soft/axure-rp) 哈哈，周刊里竟然有 原型软件 破解版链接， 不怕举报？
+* [前端领域的 “干净架构”](https://juejin.cn/post/7054888223830441991) 原作者称它为“干净架构（Clean Architecture）”，文章很长，讲的也很详细，我花了很长时间去读完了它，看完很有收获，翻译给大家，文中也融入了很多我自己的思考，推荐大家看完。
