docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -1,12 +1,48 @@
 ## 2022-05-02 ~ 2022-05-08
 
 ### 科技爱好者周刊
+* [205期 - 互联网风口过去了吗？](https://github.com/ruanyf/weekly/blob/master/docs/issue-205.md) 
+```
+过去一年，堪称互联网行业的寒冬。国内大厂普遍都在收缩业务，裁减人员。股票也是大跌，就连腾讯、阿里的股价也没有逃脱腰斩。
+现在的最大难题：互联网用户的数量可能到头了。
+1)消费互联网； 2）企业互联网； 3）产业互联网；
+消费互联网进入存量时代， 但企业互联网 和 产业互联网才刚刚起步， 未来大有可为！
 
+无线充电可以相隔多少距离？上个月，美国海军做了一个实验，相隔一公里进行无线充电，成功建立了1.6千瓦的能量传输。
+
+病毒具有传染性，疫苗为什么不可以呢？美国爱达荷大学的一个团队正在研究传染性疫苗，这种疫苗可以传染给其他人，让被传染者获得免疫力。
+
+《失控》作者70大寿， 写给年轻人建议 103 条， 以下是节选：
+1、永远不要为你不想成为的人工作。
+2、不要犯同样的错误，尝试犯新的错误。
+3、效率被高估了，休息被严重低估了。没有良好的休息，不可能有高效率。
+4、不要追求更好的方法来尽快完成任务，而要追求更好的任务，让你做得不想停下来。
+5、没有“准时”这回事，你要么迟到，要么早到。
+6、回答“我要做什么？”，需要先回答“我要成为谁？”。
+```
+* [如何使用 CSS 偷取用户信息(英文)](https://scotthelme.co.uk/can-you-get-pwned-with-css/) 本文介绍了几种只使用 CSS 获取用户信息（比如密码）的方法，以及对策。
+* [不需要 JavaScript 的5件事(英文)](https://lexoral.com/blog/you-dont-need-js/) 有一些网页互动，并不需要用 JavaScript 实现，本文介绍了5种这样的情况，比如折叠显示。
+* [黑客工具套](https://ctfever.uniiem.com/) 为 CTF 黑客比赛参加者准备的常用工具套件。
+* [前端工程化三十八讲](https://q.shanyue.tech/engineering/) 面试准备者，不错的复习资料
 
 ### 知乎： 前端快爆
+* [技术周刊 2022-05-05：Chrome 将支持 inert 属性，Web Bundle 提案](https://zhuanlan.zhihu.com/p/509756086)
+```
+Chrome 102 于 4 月 28 日进入 beta，它包含这些更新：
+对网络请求的状态进行了隔离（Network State Partitioning），避免使用网络请求状态进行跨站跟踪；
+prefetch 和 prerender 的安全性和功能进行了增强；
+支持了 Web Bundle 提案，允许加载多个子资源时使用打包格式；
+支持了 HTML 层面的 inert 属性，设置它相当于同时为该元素设置了 pointer-events: none、user-select: none，并且无法搜索、编辑、使用键盘切换焦点访问到；
+Web font 支持了在网页中访问本地字体的功能（Local Font Access API）；
+支持了 Navigation API，相比之前的 History API，强化了历史记录和应用状态记忆，允许监听所有的页面跳转操作。
 
+在发布 18.0.0 的一个月后，React 发布 18.1.0，修复多个 bug：
+点评：建议升级 18 了的直接升到这个版本吧。
+```
 
 ### 奇舞周刊
+* [445期](https://weekly.75.team/issue445.html) 9篇博文
 
 
 ### 政采云前端周刊
+* [184期](https://weekly.zoo.team/detail/184) 暂无博文
